2002-05-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Remove headers. Remove CHANGELOG.
	* configure.ac: Use AC_CONFIG_SRCDIR([pppd]).

2002-05-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	Move networking libraries to c/src/exec/libnetworking
	* configure.ac: Reflect Moval.
	* Makefile.am: Reflect Moval.
	* wrapup/Makefile.am: Reflect Moval.

2002-05-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* rtems_telnetd/pty.c: Remove bsp.h. Include <rtems/bspIo.h>.

2002-05-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* rtems/mkrootfs.c: Add (relocated from libmisc/rootfs).
	* rtems/mkrootfs.h: Ditto.
	* rtems/Makefile.am: Reflect changes above.

2002-05-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* sys/ioctl.h: Remove.
	* sys/sockio.h: Remove.
	* sys/filio.h: Remove.
	* sys/Makefile.am: Reflect changes above.

2001-05-14	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: Corrected -- entry should have been in libchip.
 
2002-05-01	Eric Norum <eric.norum@usask.ca>

	* machine/in_cksum.h: Per PR200 fix multi-line inline assembly 
	to satisfy gcc 3.1 and newer.

2002-04-26	Eric Norum <eric.norum@usask.ca>

	* netinet/in_cksum_i386.c: Add volatile so the more agressive
	optimization in gcc 3.1 does not reorder things.

2002-04-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* pppd/utils.c: Adapt to gcc-3.x.

2002-04-11	Chris Johns <ccj@acm.org>

	* c/src/libnetworking/rtems/rtems_bsdnet.h: To address PR59, added
	the drv_ctrl driver control block field to the ifconfig network driver
	structure. This field is needed by the i82586 driver which was ported
	from NetBSD as it had better hardware abstraction.

2002-04-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* ChangeLog: Fix dates.

2002-03-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* libc/rcmd.c: Replace __rtems w/ __rtems__.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).